styles.css
/* ... */
.card__img-home img{
    height: auto;
    width: 600px;
}

.main__footer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px;
    padding-top: 40px;
    padding-bottom: 40px;
    background: #DCDCDC;
    min-width: 100%;
}

.main__footer ul {
    list-style: none;
    display: flex;
    flex-direction: row;
    gap: 80px;
    font-size: 20px;
}

.main__footer a {
    text-decoration: none;
    color: black;
}

.main__footer a:hover {
    text-decoration: underline;
}

.card__collection {
    display: flex;
    flex-direction: column;
    margin-top: 140px;
    gap: 40px;
    max-width: 100vw;
    margin-bottom: 80px;
    margin-left: 60px;
    margin-right: 60px;
}

h1.card__collection-title {
    font-size: 48px;
    font-weight: normal;
    text-align: center;
}

p.card__collection-description {
   font-size: 20px;
    font-weight: lighter;
    text-align: center;
}

.gallery {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-left: auto;
    margin-right: auto;
    flex-wrap: wrap;
}

.gallery img {
    height: auto;
    width: auto;
}

.product-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(6, 1fr);
    margin-top: 80px;
    max-width: 90vw;
    margin-left: auto;
    margin-right: auto;
    gap: 40px;
    margin-bottom: 400px;
}

.card__product {
    display: flex;
    gap: 20px;
    transition: box-shadow 0.3s ease;
}

.card__product:hover {
    box-shadow: 0 2px 20px #a5a5a5;
    transform: translateY(-2px);
}

.card__product img {
    height: auto;
    width: 300px;
}

.card__product-text {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin-top: 40px;
}

h1.card__product-title {
    font-size: 32px;
    font-weight: normal;
    text-align: center;
}

p.card__product-price {
    font-size: 18px;
    font-weight: lighter;
    text-align: center;
}

p.card__product-description {
    font-size: 16px;
    font-weight: lighter;
    text-align: center;
}

.contact__title {
    display: flex;
    justify-content: center;
    margin-top: 140px;
}

h1.contact__title {
    font-size: 48px;
    font-weight: normal;
}

.card__contact {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-top: 60px;
    margin-bottom: 80px;
}

.contact-form {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 650px;
    height: 420px;
    background-color: white;
    padding: 16px;
    gap: 10px;
}

.card__img img {
    width: 650px;
    height: 420px;
    object-fit: cover;
}

.contact-form input[type=text], .contact-form textarea {
    width: 100%;
    height: 40px;
    padding-left: 10px;
    border: #DCDCDC 1px solid;
    outline: none;
    border-radius: 5px;
    font-size: 16px;
}

.contact-form input[type=email], .contact-form textarea {
    width: 100%;
    height: 40px;
    padding-left: 10px;
    border: #DCDCDC 1px solid;
    outline: none;
    border-radius: 5px;
    font-size: 16px;
}

#reasons {
    font-size: 16px;
    padding-left: 10px;
}

#message {
    height: 75px;
    padding-top: 10px;
}

#submit__btn {
    background: black;
    color: #F4F3F3;
    height: 60px;
    border: none;
    border-radius: 5px;
}

#submit__btn:hover {
    background: rgba(0, 0, 0, 0.6);
}

.flex-wrap {
    display: flex;
    justify-content: center;
}

.sort__options {
    margin-top: 40px;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin-right: 10vw;
    gap: 10px;
    font-size: 16px;
}

#sort {
    font-size: 16px;
    padding-left: 5px;
}

.grid-wrap-contact {
    display: grid;
    grid-template-columns: 25vw 1fr 25vw;
    margin-bottom: 80px;
}

.contact__description {
    grid-column: 2;
    display: flex;
    flex-direction: column;
    justify-content: center;
    line-height: 1.9;
    font-size: 16px;
    text-align: justify;
}

#customer-support {
    padding-left: 30px;
}

#contact-info {
    list-style: none;
}

#business-hours li {
    list-style: none;
}
/* ... */

